# opticus_extension

./: .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
extension/api/: extension_dll_export.h
private/EXTENSION_NAME/: my_private_api.cc  my_private_api.h
public/EXTENSION_NAME/: my_public_api.cc  my_public_api.h
